fix ref align

--- a/fern/assets/styles.css
+++ b/fern/assets/styles.css
@@ -1049,6 +1049,10 @@ main[data-theme="default"] > #fern-toc:not(:empty) {
   max-height: calc(100svh - var(--header-height) - 8.25rem - 2px) !important;
 }
 
+.fern-layout-reference {
+  align-items: center !important;
+}
+
 @media only screen and (min-width: 768px) {
   .fern-layout-reference-content[data-kind="api"] .fern-layout-reference-aside {
     top: 24px !important;
